tests/out/error/loop/map_no_key.in.bt
m := map{
	"a": 1
}
for x in m {}
